--- a/ui/.streamlit/secrets.toml
+++ b/ui/.streamlit/secrets.toml
@@ -2,5 +2,5 @@
 host = "100.114.129.9"
 database = "dascsamsclub"
 user = "insert-username-here"
-password = "instert-password-here"
+password = "insert-password-here"
 
