--- a/ui/.streamlit/secrets.toml
+++ b/ui/.streamlit/secrets.toml
@@ -1,6 +1,6 @@
 [database]
-host = "100.114.129.9"
-database = "dascsamsclub"
+host = "instert-host-here"
+database = "insert-database-here"
 user = "insert-username-here"
 password = "insert-password-here"
 
