--- a/ui/.streamlit/secrets.toml
+++ b/ui/.streamlit/secrets.toml
@@ -1,5 +1,5 @@
 [database]
-host = "instert-host-here"
+host = "insert-host-here"
 database = "insert-database-here"
 user = "insert-username-here"
 password = "insert-password-here"
