--- a/ui/.streamlit/secrets.toml
+++ b/ui/.streamlit/secrets.toml
@@ -1,6 +1,5 @@
 [database]
-host = "insert-host-here"
-database = "insert-database-here"
-user = "insert-username-here"
-password = "insert-password-here"
-
+host = "100.114.129.9"
+database = "dascsamsclub"
+user = "cgcordes"
+password = "Dascteam12"
