updating secrets file

--- a/ui/.streamlit/secrets.toml
+++ b/ui/.streamlit/secrets.toml
@@ -1,5 +1,5 @@
 [database]
-host = "100.114.129.9"
-database = "dascsamsclub"
-user = "cgcordes"
-password = "Dascteam12"
+host = "insert-host-here"
+database = "insert-database-here"
+user = "insert-username-here"
+password = "insert-password-here"
