--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 models/model_ce/pytorch_model.bin filter=lfs diff=lfs merge=lfs -text
 models/model_be/* filter=lfs diff=lfs merge=lfs -text
 models/model_ce_trained/* filter=lfs diff=lfs merge=lfs -text
+models.zip filter=lfs diff=lfs merge=lfs -text
